prepared form control

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,6 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPnimh_J0Dfl9KyRtMrH-S_96gik5cP7o"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPnimh_J0Dfl9KyRtMrH-S_96gik5cP7o&libraries=places&callback=initMap"></script>
 </body>
 </html>
